hphp/test/slow/enum-invalid-base/maybe_object.php.expectf
Fatal error: Invalid base type for enum MyEnum in %s/slow/enum-invalid-base/maybe_object.php on line 5
